--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -10,7 +10,7 @@
         "drafts": "Drafts",
         "version": "Version",
         "settings": "Settings",
-        "sign Out": "Sign Out",
+        "logout": "Sign Out",
         "users": "Users",
         "reservation":"Reservation",
         "reservations":"Reservations",
