Validation, PKCE, JWT & Auth
Signup & Login all work

Still need to implement sessions for additional security, but that requires editing bukemes-auth as well.

For now, this works.

In the future, store session ID in the http-only cookie, and store
- token
- refresh token
in localStorage.
- refresh only works with valid refresh+session
- api only works with valid token+session

useLogout removes token & refresh token.
- no more refresh
- no more api

--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -15,6 +15,12 @@
         "reservation":"Reservation",
         "reservations":"Reservations",
         "blog":"Blog",
-        "blogs":"Blogs"
+        "blogs":"Blogs",
+        "page":"Page",
+        "pages":"Pages",
+        "review":"Review",
+        "reviews":"Reviews",
+        "log":"Log",
+        "logs":"Logs"
     }
 }
