--- a/src/i18n/nl/translation.json
+++ b/src/i18n/nl/translation.json
@@ -15,6 +15,8 @@
         "reservation":"Reservatie",
         "reservations":"Reservaties",
         "blog":"Blog",
-        "blogs":"Blogs"
+        "blogs":"Blogs",
+        "page":"Pagina",
+        "pages":"Paginas"
     }
 }
